[gd_scene load_steps=3 format=3 uid="uid://bym86bvojc2um"]

[ext_resource type="FontFile" uid="uid://yx54gt5dloje" path="res://fonts/PixelOperator8.ttf" id="1_loikp"]
[ext_resource type="Script" uid="uid://cy6u8xfbe3t1a" path="res://pause_page.gd" id="1_rixsf"]

[node name="pause_page" type="CanvasLayer"]
visible = false
script = ExtResource("1_rixsf")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.49019608)

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -56.5
offset_right = 133.0
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_loikp")
theme_override_font_sizes/font_size = 30
text = "GAME PAUSED"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_loikp")
text = "RESUME"

[node name="restart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_loikp")
text = "RESTART"

[node name="mainMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_loikp")
text = "MAIN MENU"

[connection signal="pressed" from="MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/mainMenu" to="." method="_on_main_menu_pressed"]
